@@ -3,6 +3,7 @@
   - removed the options dialog box from the editor
   - fix trigger activation so you can activate a trigger more than
     once on a map
+  - make rawfile.read return a ByteArray object
 
 2003.02.05
   - fixed GrabImage crash bug in standard16 and interpolate16
